Navbar visibility fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,10 +143,15 @@ textarea {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.open>a:hover {
+    color: #474350 !important;
+    box-shadow: inset 0px 50px 0px #eeeeee !important;
+}
 
 .navbar-title a:hover {
     box-shadow: inset 0px 50px 0px #0C91A5;
-    color: #E4E5E7;
+    color: #E4E5E7 !important;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     -webkit-transition: box-shadow .2s;
